# ethicalfish-pi

./: .env  .gitignore  Cargo.toml
src/: main.rs
