[package]
name = "ethicalfish-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tch = { version = "0.13", features = ["download-libtorch"] }
base64 = "0.21"
image = "0.24"
